crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__power_op_newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/power_op_newline.py
---
## Input

```python
# flags: --line-length=0
importA;()<<0**0#
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,6 +1,3 @@
+# flags: --line-length=0
 importA
-(
-    ()
-    << 0
-    ** 0
-)  #
+() << 0**0  #
```

## Ruff Output

```python
# flags: --line-length=0
importA
() << 0**0  #
```

## Black Output

```python
importA
(
    ()
    << 0
    ** 0
)  #
```


