crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_async_stmts.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_async_stmts.py
---
## Input

```python
# flags: --preview
async def func() -> (int):
    return 0


@decorated
async def func() -> (int):
    return 0


async for (item) in async_iter:
    pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --preview
 async def func() -> int:
     return 0
 
```

## Ruff Output

```python
# flags: --preview
async def func() -> int:
    return 0


@decorated
async def func() -> int:
    return 0


async for item in async_iter:
    pass
```

## Black Output

```python
async def func() -> int:
    return 0


@decorated
async def func() -> int:
    return 0


async for item in async_iter:
    pass
```


